# ikalyancode

./: .env  .gitignore  CTF Challenge  Cargo.toml  README.md  diesel.toml  index.js
Projects/Slack-bot/: SlackService.java  ThresholdController .java  ThresholdMonitorService.java
Projects/employee-management/: README.md  pom.xml
Projects/node-docker-app/: Dockerfile  package.json
Projects/react-dropdown/components/: Dropdown.css
Projects/todo_app/app/: __init__.py  models.py
Projects/todo_app/templates/: base.html  index.html
Projects/ut-startups-assessment/: .gitignore  README.md
Projects/ut-startups-assessment/backend/: database.py  main.py  models.py  schemas.py  seed.py
ResumeWebsite/: .env  App.tsx  PROXY_README.md  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  types.ts  vite.config.js  vite.config.ts
ResumeWebsite/api/: ai-proxy.ts
ResumeWebsite/components/: Chatbot.tsx  EducationCard.tsx  ExperienceCard.tsx  FallingText.tsx  Header.tsx  LetterGlitch.tsx  Prism.css  Prism.tsx  Section.tsx  SkillPill.tsx  SplashCursor.tsx  ThemeToggle.tsx  icons.tsx
ResumeWebsite/js/: main.js
ResumeWebsite/server/: proxy.js
ResumeWebsite/src/: App.tsx
ResumeWebsite/src/lib/: ogl.ts
my-resume-website/: index.html  package-lock.json  package.json
node-docker-app/: README.md  server.js
node-docker-app/k8s/: deployment.yaml
src/: App.js  db.rs  main.rs  schema.rs
src/components/: Dropdown.js
todo_app/app/: routes.py
todo_app/instance/: todo.db
(+30 files in other folders)
