[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
jsonwebtoken = "8"
bcrypt = "0.14"
dotenv = "0.15"

[dependencies]
diesel = { version = "2.0", features = ["postgres"] }
dotenv = "0.15"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5", features = ["json"] }
